# Uniform

./: .gitignore  Makefile  Makefile.in  configure.ac
.github/workflows/: MacOS.yml  Ubuntu.yml  Windows.yml
modules/ast/: Makefile.in
modules/ast/inc/: nodes.h  shared.h  tree.h
modules/ast/src/: ast.c  nodes.c
modules/ast/test/: main.c
modules/compiler/: Makefile.in
modules/compiler/inc/: compiler.h  shared.h  x86.h  x86_64.h
modules/compiler/src/: module.c  x86.c  x86_64.c
modules/compiler/test/: main.c
modules/core/: Makefile.in
modules/core/inc/: shared.h
modules/core/src/: integer.c
modules/core/test/: integer_test.c  main.c
modules/error/: Makefile.in
modules/error/inc/: shared.h
modules/error/src/: error.c
modules/file/: Makefile.in
modules/file/inc/: shared.h
modules/file/src/: file.c
modules/file/test/: main.c
modules/logger/: Makefile.in
modules/logger/inc/: shared.h
modules/logger/src/: logger.c
modules/parser/: Makefile.in
modules/parser/inc/: declarations.h  expressions.h  modules.h  parser.h  program.h  shared.h  statements.h  types.h
modules/parser/src/: declarations.c  expressions.c  modules.c  parser.c  program.c  statements.c  types.c
modules/parser/test/: expressions_test.c  functions_test.c  main.c  modules_test.c  parser_test.c  program_test.c  statements_test.c
modules/preprocessor/: Makefile.in
modules/preprocessor/inc/: shared.h
modules/preprocessor/src/: emitter.c  macros.c  preprocessor.c
modules/scanner/: Makefile.in
modules/symboltable/: Makefile.in
modules/tokens/: Makefile.in
(+26 files in other folders)
